# radars_fr

./: .gitignore  Cargo.toml  README.md  poi_reader.pl
.github/workflows/: build-for-release.yml  continuous-integration.yml
data/: radars_fr.gpx  radars_fr.ov2
src/: error.rs  gpx.rs  main.rs  radar.rs
src/model/: error.rs  mod.rs  radar.rs
src/ov2/: error.rs  mod.rs  poi.rs
