[package]
name = "radars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary_rw = { version = "4.0.4", features = ["wasm32"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
encoding = "0.2.33"
itertools = "0.12.1"
num_enum = "0.7.2"
polars = { version = "0.39.2", features = ["lazy", "json"] }
polars-io = { version = "0.39.2", features = ["json"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
# https://github.com/sfackler/rust-openssl/issues/2197
openssl = { version="0.10.64", features = ["vendored"]}   

[dev-dependencies]
serde_test = "1.0.176"

[target.'cfg(windows)'.dependencies]
openssl = "0.10.64"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1


